<resources>
    <string name="app_name">Strategy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buildings">Buildings</string>
    <string name="resources">Resources</string>
    <string name="ranking">Ranking</string>
    <string name="preferences">Preferences</string>
    <string name="newGame">New Game</string>
</resources>
